tests/should_fail/loop_typestate.fit
enum ConnState { Ready, Closing }

resource Conn<S> {
    sock: Socket,
    cleanup: force_close,
}

fn make_conn() -> Conn<Ready>
fn transition(c: Conn<Ready>) -> Conn<Closing>

fn test() -> () {
    let c = make_conn()
    loop {
        let c = transition(c)
        break
    }
}
